--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -5,7 +5,7 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    font-size: 40px;
+    font-size: 20px;
 }
 
 .Main canvas {
@@ -17,4 +17,9 @@
     font-size: 20px;
     border-radius: 15px;
     margin-top: 20px;
+}
+
+h2 {
+    font-style: italic;
+    margin-bottom: 10px;
 }
