--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -38,5 +38,22 @@
     color: red;
     letter-spacing: 20px;
     font-weight: 800;
-    font-size: 30px
+    font-size: 30px;
+    text-transform: uppercase;
+    background: linear-gradient(to right , hsl(0, 1%, 17%) 5%, hsl(0, 97%, 49%) 20%, hsl(0, 0%, 13%) 50%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    animation: shine 3s infinite linear;
+}
+
+@keyframes shine {
+    0% {
+        background-position: -150px;
+    }
+    60% {
+        background-position: 50px;
+    }
+    100% {
+        background-position: 250px;
+    }
 }
