--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -15,6 +15,7 @@
 
 .Main canvas {
     background-color: black;
+    box-shadow: 3px 3px 3px rgba(0, 0 , 0, 0.5);
 }
 
 .Main button {
@@ -28,6 +29,8 @@
     align-items: center;
     justify-content: center;
     margin-top: 20px;
+    border: 4px solid rgb(173, 7, 7);
+    box-shadow: 3px 3px 3px rgba(0, 0 , 0, 0.5);
 }
 
 #fruit {
