--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -6,3 +6,16 @@
     justify-content: center;
     font-size: 20px;
 }
+
+.Footer a {
+    color: rgb(204, 199, 199);
+    text-decoration: none;
+    margin-left: 5px;
+    position: relative;
+    transition: all 200ms ease-in-out;
+}
+
+.Footer a:hover, a:focus {
+    color: rgb(253, 87, 87);
+    transform: translateY(-5px);
+}
