--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -25,7 +25,7 @@
 .Main button {
     position: relative;
     padding-left: 20px;
-    font-size: 20px;
+    font-size: 25px;
     border-radius: 15px;
     color: white;
     background-color: red;
@@ -36,7 +36,36 @@
     border: 4px solid rgb(173, 7, 7);
     box-shadow: 3px 3px 3px rgba(0, 0 , 0, 0.5);
     font-family: 'Roboto', sans-serif;
+    cursor: pointer;
+    transition: all 200ms ease-in-out;
 }
+
+button::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: -1;
+    background-color: black;
+    transform: scale(0);
+    transition: all 500ms ease-in-out;
+}
+
+button:hover::before, button:focus::before {
+    transform: scale(1.5);
+ }
+
+ button {
+    z-index: 1;
+    overflow: hidden;
+    transition: all 500ms ease-in-out;
+ }
+
+ button:hover, button:focus {
+    color: rgb(250, 250, 177);
+ }
 
 #fruit {
     display: none;
