--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -33,8 +33,6 @@
     color: red;
 } 
 
-
-
 .Main canvas {
     background-color: black;
     box-shadow: 3px 3px 3px rgba(0, 0 , 0, 0.5);
@@ -110,5 +108,43 @@ button:hover::before, button:focus::before {
     }
     100% {
         background-position: 250px;
+    }
+}
+
+
+@media only screen and (max-width: 600px) {
+    .Main {
+        font-size: 16px;
+    }
+
+    .Main h2 {
+        margin-bottom: 8px;
+    } 
+    
+    .Main h2 img {
+        width: 50px;
+    }
+
+    .Main h2 span {
+        font-size: 20px;
+    }
+    
+    .Main button {
+        padding-left: 15px;
+        font-size: 20px;
+        border-radius: 10px;
+        margin-top: 18px;
+        border: 3px solid rgb(173, 7, 7);
+        box-shadow: 3px 3px 3px rgba(0, 0 , 0, 0.5);
+    }
+
+    .Main img {
+        width: 50px;
+    }
+    
+    .Main .gameOver {
+        letter-spacing: 18px;
+        font-weight: 700;
+        font-size: 20px;
     }
 }
