--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -19,3 +19,9 @@
     color: rgb(253, 87, 87);
     transform: translateY(-5px);
 }
+
+@media only screen and (max-width: 600px) {
+    .Footer {
+        font-size: 16px;
+    }
+}
