--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -69,7 +69,7 @@ button::before {
     transition: all 500ms ease-in-out;
 }
 
-button:hover::before, button:focus::before {
+button:hover::before {
     transform: scale(1.5);
  }
 
@@ -79,7 +79,7 @@ button:hover::before, button:focus::before {
     transition: all 500ms ease-in-out;
  }
 
- button:hover, button:focus {
+ button:hover {
     color: rgb(250, 250, 177);
  }
 
